--- a/pages/blog.html
+++ b/pages/blog.html
@@ -78,7 +78,7 @@
         <div class="row justify-content-start">
             <div class="col-9 text-area-left">
                 <h1>What you need to know about COVID-19 testing</h1>
-                <p style="font-family: 'Noto Sans', sans-serif;">
+                <p style="font-family: 'Noto Sans', sans-serif; font-weight: 300;">
                     <br>
                     From 1 December 2020, in Singapore, you are able to get tested for COVID-19 with the Polymerase
                     Chain
@@ -110,44 +110,47 @@
     <!-- News Boxes -->
     <div class="news_box_group">
         <div class="col-9 area_major">
-            <div class="col-9 text_area_major d-flex flex-column justify-content-center">
-                <p class="title" style="margin: 0;">How does a PCR Test Work?</p>
-                <p class="content" style="font-size: 1.2rem;">Dr Tan Wei Ming from Aurora Medical is here to answer all
-                    of your questions on modern Covid-19 tests, vaccinations and talk about some common misconceptions
-                    you may have about the Covid-19 Vaccine ... <a href="#">Read More</a></p>
+            <div class="col-9 text_area_major d-flex flex-column justify-content-center ">
+                <p class="title" style="margin: 0; font-size: 2rem;">How does a PCR Test Work?</p>
+
+                <p class="content" style="font-size: 1.2rem; text-align: left; ">Dr Tan Wei Ming from Aurora Medical is
+                    here to answer all
+                    of your questions on the latest Covid-19 tests, vaccinations and common
+                    misconceptions
+                    you may have about the Covid-19 Vaccine.</p>
             </div>
         </div>
         <div class="col-3 area_sub">
-            <div class="col-3 text_area_sub">
+            <div class="col-3 text_area_sub" style="cursor: pointer;">
                 <p class="title" style="margin:0;">Should you take your 5th dose?</p>
+
                 <p class="content">Dr Ang shares his thoughts, and why being cautious of Covid-19 might be more
-                    important than you think... <a href="#">Read More</a></p>
+                    important than you think.</p>
             </div>
         </div>
         <div class="col-3 area_sub"
-            style="background: url(../assets/images/china_blog.jpg) no-repeat; background-size: 100% 60%;">
+            style="background: url(../assets/images/china_blog.jpg) no-repeat; background-size: 100% 60%; cursor: pointer;">
             <div class="col-3 text_area_sub">
                 <p class="title" style="margin:0;">China tightens border-control</p>
                 <p class="content">On the 15th of October, China made the move to tighten their border restrictions.
-                    Effective 20th October, now travellers going into Mainland China are expected to... <a href="#">Read
-                        More</a></p>
+                    Effective 20th October, now travellers going into Mainland China are expected to be fully vaccinated and more.</p>
             </div>
         </div>
         <div class="col-3 area_sub"
-            style="background: url(../assets/images/xbb_blog.jfif) no-repeat; background-size: 100% 60%;">
+            style="background: url(../assets/images/xbb_blog.jfif) no-repeat; background-size: 100% 60%; cursor: pointer;">
             <div class="col-3 text_area_sub">
                 <p class="title" style="margin:0;">XBB Strain. Mighty or Mini?</p>
                 <p class="content">The new Covid-19 strain XBB is scaring people around the word, and stressing many
                     workers who now are being forced to return to their
-                    workplaces... <a href="#">Read More</a></p>
+                    workplaces.</p>
             </div>
         </div>
         <div class="col-3 area_sub">
             <div class="col-3 text_area_sub"
-                style="background: url(../assets/images/landscape_blog.jpg) no-repeat; background-size: 100% 56%;">
+                style="background: url(../assets/images/landscape_blog.jpg) no-repeat; background-size: 100% 56%; cursor: pointer; background-position-y: 2px;">
                 <p class="title" style="margin:0;">Other related news in Southeast Asia</p>
                 <p class="content">Along with Singapore, many other popular travel destinations are starting to ease up
-                    on their border restrictions, but there are some exceptions... <a href="#">Read More</a></p>
+                    on their border restrictions, but there are some exceptions.</p>
             </div>
         </div>
     </div>
