--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -247,10 +247,10 @@
                 </div>
                 <div style="flex: 1; text-align: right;" class="d-flex flex-column justify-content-center" >
                     <p style="color: #333333; font-size: 1rem; margin: 0;">
-                        <span class="material-symbols-outlined"> call </span> +65 8052 8564
+                        <span class="material-symbols-outlined"> call </span> +65 6873 7432
                     </p>
                     <p style="color: #333333; font-size: 1rem;">
-                        <span class="material-symbols-outlined"> mail </span> aurora@aurora.sg
+                        <span class="material-symbols-outlined"> mail </span> contact@aurora.com
                     </p>
                 </div>
             </div>
