--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         }
 
         .button:hover {
-            color: #112F24;
+            color: #333333;
             background-color: white;
         }
 
@@ -224,7 +224,7 @@
         .countrycontainer {
             padding: 5rem 5%;
             padding-bottom: 0;
-            color: #112F24;
+            color: #333333;
         }
 
         .countrytitle {
@@ -284,8 +284,8 @@
         }
 
         .recommplancontainer .button {
-            color: #112F24;
-            border-bottom-color: #112F24;
+            color: #333333;
+            border-bottom-color: #333333;
         }
 
         .recommplancontainer .button:hover {
@@ -562,13 +562,13 @@
                 <div class="col-lg-7 col-md-12 py-2">
                     <div class="row mx-auto align-items-center">
                         <div class="col-4" style="padding-left: 0;">
-                            <button style="background-color: white; color: #112F24; border: none;" class="px-3 py-1 d-block" id="decrement-people-count-btn">
+                            <button style="background-color: white; color: #333333; border: none;" class="px-3 py-1 d-block" id="decrement-people-count-btn">
                                 -
                             </button>
                         </div>
                         <div class="col-4 text-center" id="people-count" style="font-weight: 400;">1</div>
                         <div class="col-4 d-flex justify-content-end" style="padding-right: 0;">
-                            <button style="background-color: white; color: #112F24; border: none" class="px-3 py-1 d-block" id="increment-people-count-btn">
+                            <button style="background-color: white; color: #333333; border: none" class="px-3 py-1 d-block" id="increment-people-count-btn">
                                 +
                             </button>
                         </div>
@@ -578,7 +578,7 @@
         </div>
     </div>
         <!--Box for recommended Plan-->
-        <div class="recommplancontainer w-75 my-5 mx-auto" style="color: #112F24;">
+        <div class="recommplancontainer w-75 my-5 mx-auto" style="color: #333333;">
             <h2 class="text-center display-6 mt-5" style="font-size: 3rem;">
                 Recommended Plan
             </h2>
@@ -651,7 +651,7 @@
     <hr class="mx-auto" style="width: 90%">
 
     <!--PCR Test Section-->
-    <div class="container-fluid pcrcontainer" style="color:#112F24">
+    <div class="container-fluid pcrcontainer" style="color:#333333">
         <div class="row">
             <div class="col-lg-6 col-md-12 text-start d-flex flex-column justify-content-center">
                 <h1 style="font-size: 4rem">
@@ -694,7 +694,7 @@
     <hr class="mx-auto" style="width: 90%;">
 
     <!--ART Test Section-->
-    <div class="container-fluid pcrcontainer mb-5" style="color:#112F24">
+    <div class="container-fluid pcrcontainer mb-5" style="color:#333333">
         <div class="row">
             <div class="col-lg-6 col-md-12 text-start d-flex flex-column justify-content-center">
                 <h1 style="font-size: 4rem">
