booknow page formatted

--- a/pages/booknow.html
+++ b/pages/booknow.html
@@ -275,14 +275,14 @@
          input, textarea, select {
             font-family: 'Noto Sans', sans-serif;
             font-weight: 300;
-            color: #112F24;
+            color: #333333;
         } 
 
         input[type="text"], input[type="email"], input[type="number"], .form-select {
             display: inline-block;
             background-color: transparent;
             border: none;
-            border-bottom: 1px solid #112F24;
+            border-bottom: 1px solid #333333;
             width: 80%;
             transition: all 0.3s;
         }   
@@ -292,10 +292,10 @@
         }
 
         input[type="text"]::placeholder, input[type="email"]::placeholder, input[type="number"]::placeholder {
-            color: #112F24;
+            color: #333333;
             font-family: 'Noto Sans', sans-serif;
             font-weight: 300;
-            color: #112F24;
+            color: #333333;
         } 
 
         .form-group textarea {
@@ -308,7 +308,7 @@
         .form-group input[type="text"], .contact-form textarea {
             font-family: 'Noto Sans', sans-serif;
             font-weight: 300;
-            color: #112F24;
+            color: #333333;
         } 
 
 
@@ -316,6 +316,7 @@
             font-family: 'Playfair Display', Serif;
             font-size: 1.25rem;
             font-weight: 300;
+            
         }
 
         .button {
@@ -331,19 +332,19 @@
         }
 
         .button:hover {
-            color: #112F24;
+            color: #333333;
             background-color: white;
         }
 
 
         .contact-form .button {
-            color: #112F24;
-            border-color: #112F24;
+            color: #333333;
+            border-color: #333333;
         }
 
         .contact-form .button:hover {
             color: white;
-            background-color: #112F24;
+            background-color: #333333;
         }
 
         .contact-info {
@@ -369,18 +370,19 @@
             font-family: 'Noto Sans', sans-serif;
             font-size: 1rem;
             font-weight: 700;
-            color: #112F24;
+            color: #41B188;
             background-color: transparent;
             border: none;
-            border-bottom: 2px solid #112F24;
+            border: 2px solid #41B188;
             padding: 1rem;
             transition: all 0.3s;
-            margin: 1rem;
+            margin: 3rem;
+            width:8rem;
         }
 
         .button2:hover {
             color: white;
-            background-color: #112F24;
+            background-color: #41B188;
         }
 
     </style>
