--- a/pages/countries.html
+++ b/pages/countries.html
@@ -80,6 +80,10 @@
             font-size: 1rem
         }
 
+        p{
+            font-size: 1.25rem;
+        }
+
         .navbtn:hover {
             color: #41B188;
         }
@@ -372,7 +376,7 @@
     <!-- Hero Banner -->
     <section class="hero-banner container-fluid d-flex justify-content-center align-items-center">
         <div class="text-center">
-            <h1 style=" font-size: 4rem; line-height: 3.5rem; font-family: 'Playfair Display', serif;">
+            <h1 style=" font-size: 5rem; line-height: 3.5rem; font-family: 'Playfair Display', serif;">
                 Country Restrictions
             </h1>
             <p class="pt-4 text-center">
