--- a/pages/countries.html
+++ b/pages/countries.html
@@ -38,6 +38,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.6.6/css/flag-icons.min.css" />
 
 
+
+
     <style>
         h1 {
             font-family: 'Playfair Display', sans-serif;
@@ -346,6 +348,28 @@
         .btn-col {
             padding: 3% 0%;
         }
+
+        .country-flag2{
+            margin-right: 1%;
+        }
+
+        .country-title2 {
+            font-size: 4vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            font-family: 'Playfair Display', sans-serif;
+        }
+
+        .country-container2{
+            margin-top:8%;
+        }
+
+        .country-details-row{
+            margin-top:3%;
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -384,6 +408,36 @@
             </p>
         </div>
     </section>
+
+    <div class="container country-container2">
+        <div class="row">
+            <div class="country-title2 "><span class="fi fi-cn country-flag2"></span>China</div>
+        </div>
+        <div class="row country-details-row">
+            <div class="col-2"></div>
+            <div class="col-3">
+                <div class="country-details">
+                    Restrictions
+                    <ul class="country-list">
+                        <li>PCR and IGM Required</li>
+                        <li>48 Hour Quarantine</li>
+                        <li>Mask Required for <strong>ALL</strong> spaces</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-1"></div>
+            <div class="col-3">
+                <div class="country-details">
+                    Our Plan for You
+                    <ul class="country-list">
+                        <li>PCR and IGM</li>
+                        <li style="font-size: 1.5rem;">ONLY $90 ea</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-2"></div>
+        </div>
+    </div>
 
 
     <!--Countries List-->
