Countries pages done

--- a/pages/booknow.html
+++ b/pages/booknow.html
@@ -440,7 +440,7 @@
             <h1 style="font-size: 4rem;">
                 Booking Form
             </h1>
-            <p style="font-family: 'Noto Sans', sans-serif; font-weight: 300; font-weight: 1.25rem;">
+            <p style="font-family: 'Noto Sans', sans-serif; font-weight: 300;">
                 Get ready for your booking with the most affordable and reliable Covid-19 testing service in Singapore. <br>
                 Enter your personal details and move on to payment details in the next page.</p>
         </div>
