--- a/pages/countries.html
+++ b/pages/countries.html
@@ -313,8 +313,8 @@
         }
 
         .btn-country-hollow:hover {
-            background-color: white;
-            color: #41B188;
+            background-color: #41B188;
+            color: white;
             border-color: #41B188;
         }
 
@@ -446,6 +446,10 @@
 
         .updated-button-row{
             margin-top: 2%;
+        }
+
+        .all-countries-row{
+            margin:5% 0%;
         }
     </style>
 </head>
@@ -727,6 +731,13 @@
 
 
         <!--END OF Myanmar-->
+
+        <div class="row text-center all-countries-row">
+            <div class="col">
+                <a href="#" class="btn btn-outline-secondary btn-country-hollow">View all Countries</a>
+            </div>
+            
+        </div>
 
     </div>
 
