--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description"
+        content="Aurora Medical offers the best Covid-19 test and prevention schemes for travellers of all ages to be able to travel fuss-free, without worry. Contact us if you have any questions. ">
+    <meta name="keywords" content="Mobile Departure Swab test, PCR Test, Covid-19 Test, Aurora Medical, Contact Us, Covid Travel Restrictions">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon"
     href="https://i.natgeofe.com/n/63527567-9a8b-4b08-819d-a6142fb2b350/aurora-kirkjufell-iceland_4x3.jpg"
@@ -21,7 +24,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- stylesheet -->
     <link rel="stylesheet" href="../css/contact-us-style.css">
-    <title>Contact Us</title>
+    <title>Aurora Medical : Contact Us</title>
 </head>
 <body>
     <!-- navbar -->
