--- a/pages/cart.html
+++ b/pages/cart.html
@@ -155,7 +155,7 @@
             font-family: 'Noto Sans', sans-serif;
         }
         
-        a, h4, label, option, input, h5 {
+        a, h4, label, option, input, h5, p {
             font-family: 'Noto Sans', sans-serif;
 
         }
