--- a/pages/pcr.html
+++ b/pages/pcr.html
@@ -538,18 +538,15 @@
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne"
                        >
-                        Mandai
+                        Bishan
                     </button>
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Mandai Ave 1234124<br>
-                        Singapore 123124<br>
-                        Contact: 123412
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.6194581434756!2d103.7884388500985!3d1.404612661783859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da13d91b72b4d3%3A0x900f5e4b86449d19!2s80%20Mandai%20Lake%20Rd%2C%20Singapore%20729826!5e0!3m2!1sen!2ssg!4v1665648782937!5m2!1sen!2ssg"
-                            width="100%" height="200vw" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div class="accordion-body">284 Bishan Street 22<br>
+                        Singapore 570284<br>
+                        +65 6734 3728
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1994.3481981193293!2d103.84308556905142!3d1.3587920179148039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da1722002ee71f%3A0xf805deb532eae57b!2sNeighborhood%20Clinic!5e0!3m2!1sen!2ssg!4v1668347501422!5m2!1sen!2ssg" width="100%" height="250rem" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
@@ -563,12 +560,10 @@
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">NTU Ave 1239819283<br>
-                        Contact: 123891283
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.6194581434756!2d103.7884388500985!3d1.404612661783859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da13d91b72b4d3%3A0x900f5e4b86449d19!2s80%20Mandai%20Lake%20Rd%2C%20Singapore%20729826!5e0!3m2!1sen!2ssg!4v1665648782937!5m2!1sen!2ssg"
-                            width="100%" height="200vw" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div class="accordion-body">21 Nanyang Link<br>
+                        Singapore 637371 <br>
+                        +65 6873 7432
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.7244796675313!2d103.67984915009859!3d1.3416771619711447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da0f75f1b46c61%3A0x9bc89e72d25f4d5f!2s21%20Nanyang%20Link%2C%20School%20of%20Physical%20and%20Mathematical%20Sciences%2C%20Singapore%20637371!5e0!3m2!1sen!2ssg!4v1668347595540!5m2!1sen!2ssg" width="100%" height="250rem" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
@@ -576,17 +571,15 @@
                 <h2 class="accordion-header" id="flush-headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                        Jurong East
+                        Tampines
                     </button>
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">NTU Ave 1239819283<br>
-                        Contact: 123891283
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.6194581434756!2d103.7884388500985!3d1.404612661783859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da13d91b72b4d3%3A0x900f5e4b86449d19!2s80%20Mandai%20Lake%20Rd%2C%20Singapore%20729826!5e0!3m2!1sen!2ssg!4v1665648782937!5m2!1sen!2ssg"
-                            width="100%" height="200vw" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div class="accordion-body">827 Tampines Street 81, #01-142 <br>Singapore 520827
+                        <br>
+                        Contact: +65 6372 9382
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.710992085907!2d103.9306400500986!3d1.3499239619469796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da3d6c0e64fd83%3A0x48bc2fe6c24c486a!2s827%20Tampines%20Street%2081%2C%20%2301%20142%2C%20Singapore%20520827!5e0!3m2!1sen!2ssg!4v1668347762693!5m2!1sen!2ssg" width="100%" height="250rem" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
