--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -22,6 +22,11 @@
     <!-- stylesheets -->
     <link rel="stylesheet" href="../css/about-us-style.css">
     <title>Aurora Medical : About Us</title>
+    <style>
+        body {
+    cursor:default;
+}
+    </style>
 </head>
 <body>
     <!-- navbar -->
