--- a/pages/booknow.html
+++ b/pages/booknow.html
@@ -33,6 +33,9 @@
 
 
     <style>
+        body {
+    cursor:default;
+}
         h1 {
             font-weight: bold;
             font-family: 'Playfair Display', serif !important;
