--- a/pages/cart_art_prefilled.html
+++ b/pages/cart_art_prefilled.html
@@ -37,7 +37,9 @@
             color: white;
             background: #FEBB60;
         }
-
+        body {
+    cursor:default;
+}
         .row {
             width: 100%;
         }
