--- a/pages/countries.html
+++ b/pages/countries.html
@@ -44,6 +44,9 @@
 
 
     <style>
+        body {
+    cursor:default;
+}
         h1 {
             font-family: 'Playfair Display', sans-serif;
         }
