--- a/pages/igm.html
+++ b/pages/igm.html
@@ -32,6 +32,9 @@
         rel="stylesheet">
     <link rel="stylesheet" href="../css/footer-and-navbar-style.css">
     <style>
+        body {
+    cursor:default;
+}
         ::selection {
             color: white;
             background: #FEBB60;
