--- a/pages/products.html
+++ b/pages/products.html
@@ -167,6 +167,10 @@
             background-color: #41B188;
             border-bottom: 2px solid white;
         }
+        body {
+    cursor:default;
+}
+
     </style>
 </head>
 
