--- a/pages/sart.html
+++ b/pages/sart.html
@@ -33,6 +33,9 @@
 
     <link rel="stylesheet" href="../css/footer-and-navbar-style.css">
     <style>
+        body {
+    cursor:default;
+}
         ::selection {
             color: white;
             background: #FEBB60;
