--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -147,6 +147,9 @@ h1 {
             color: white;
             background: #FEBB60;
         }
+body {
+    cursor:default;
+}
     </style>
 </head>
 
