--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -25,6 +25,11 @@
     <!-- stylesheet -->
     <link rel="stylesheet" href="../css/contact-us-style.css">
     <title>Aurora Medical : Contact Us</title>
+    <style>
+        body {
+    cursor:default;
+}
+    </style>
 </head>
 <body>
     <!-- navbar -->
