--- a/pages/pcr.html
+++ b/pages/pcr.html
@@ -34,6 +34,9 @@
     <link rel="stylesheet" href="../css/footer-and-navbar-style.css">
 
     <style>
+        body {
+    cursor:default;
+}
         ::selection {
             color: white;
             background: #FEBB60;
