--- a/pages/products.html
+++ b/pages/products.html
@@ -34,6 +34,11 @@
 
     <link rel="stylesheet" href="../css/footer-and-navbar-style.css">
     <style>
+        ::selection {
+            color: white;
+            background: #FEBB60;
+        }
+
         .hero {
             background-image: url("image/ser");
             background-repeat: no-repeat;
