--- a/pages/sart.html
+++ b/pages/sart.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Aurora Medical : Supervised ART Test</title>
-    <meta name="description" content="Aurora Medical offers the Supervised Antigen Rapid Testing, the most convenient and flexible test for testing from the comfort of your home. ">
+    <meta name="description"
+        content="Aurora Medical offers the Supervised Antigen Rapid Testing, the most convenient and flexible test for testing from the comfort of your home. ">
     <meta name="keywords" content="Supervised ART Test, PCR Test, Covid-19 Test, Aurora Medical">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,6 +51,7 @@
             margin: 0;
             padding: 0;
             overflow-x: hidden;
+            cursor: default;
 
         }
 
@@ -97,6 +99,7 @@
             padding: 2%;
             font-family: 'Playfair Display', serif;
         }
+
         .button {
             font-family: 'Noto Sans', sans-serif;
             font-size: 1rem;
@@ -104,14 +107,15 @@
             color: #112F24;
             background-color: transparent;
             border: none;
-            border-bottom: 2px solid #112F24;
+            border-bottom: 2px solid #333333;
             padding: 1rem;
             transition: all 0.3s;
         }
 
         .button:hover {
             color: white;
-            background-color: #112F24;
+            background-color: #41B188;
+            border-bottom: 2px solid #41B188;
         }
 
         h2 {
@@ -223,101 +227,127 @@
         .carousel-img {
             object-fit: cover;
         }
+
         .col-6 {
             align-items: center;
             text-align: center;
             vertical-align: middle;
         }
+
         .steps3 {
             padding-top: 30%;
             padding-bottom: 30%;
         }
-    
+
         .steps3 h3 {
             font-size: 2.5vw;
             text-align: center;
         }
+
         a {
             font-family: 'Noto Sans', sans-serif;
             font-size: 1rem;
             font-weight: 300;
         }
+
         h1 {
             color: white;
         }
+
         h3 {
             font-size: 4rem;
             font-family: "Playfair Display", serif;
         }
-        .accordion-button
-        {
+
+        .accordion-button {
             font-size: 1rem;
             font-family: 'Noto Sans';
-        } 
+        }
+
         li {
             font-size: 1rem;
             font-family: 'Noto Sans';
-        }       
+        }
+
         h2 {
             font-family: 'Playfair Display';
             font-size: 3rem;
         }
-        a:link { text-decoration: none; }
+
+        a:link {
+            text-decoration: none;
+        }
+
         .list-group-item {
             border-color: #41B188;
             border-style: solid;
             border-width: 2px;
         }
+
         .ms-2 {
             font-family: 'Noto Sans', Sans-serif;
             font-weight: 300;
             font-size: 1rem;
         }
+
         .accordion-item {
             font-family: Noto Sans;
             Font-weight: 300;
         }
+
         .accordion-button {
             font-weight: 500;
             font-family: 'Playfair Display';
 
         }
+
         .whoa {
             border-style: solid;
-            border-width: 1px; 
+            border-width: 1px;
             border-color: #41B188;
             border-radius: 5px;
             margin: 4%;
-            padding: 10%;
+            padding: 5%;
+            border-radius: 0;
         }
-        .whoa a{
+
+        .whoa a {
             font-size: 1.5rem;
         }
+
         .whoa strong {
             font-size: 2rem;
-            font-weight: 700;
+            font-weight: 500;
             font-family: 'Playfair Display', sans-serif;
         }
-        .hero-banner {
-    min-height: 60vh;
-    background-image: url('../assets/images/sart.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-blend-mode: darken;
-    background-color: rgba(0, 0, 0, 0.47);
-    padding: 5%;
-}
-h1 {
-    font-family: 'Playfair Display', serif;
-}
 
+        .hero-banner {
+            min-height: 60vh;
+            background-image: url('../assets/images/sart.png');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-blend-mode: darken;
+            background-color: rgba(0, 0, 0, 0.47);
+            padding: 5%;
+        }
+
+        h1 {
+            font-family: 'Playfair Display', serif;
+        }
+
+        .text {
+            font-size: 1.2rem;
+            font-weight: 300;
+            text-align: left;
+        }
     </style>
 </head>
 
 <body>
     <!-- navbar -->
-    <nav class="container-fluid d-flex justify-content-between align-items-center p-3 flex-wrap position-fixed" style="z-index: 10000; background-color: white" id="navbar">
+    <nav class="container-fluid d-flex justify-content-between align-items-center p-3 flex-wrap position-fixed"
+        style="z-index: 10000; background-color: white" id="navbar">
         <div>
             <a href="../index.html">
                 <h1 style="font-size: 2rem; font-weight: 400; color: #41B188">
@@ -341,7 +371,7 @@ h1 {
 
     <section class="hero-banner container-fluid d-flex justify-content-center align-items-center">
         <div class="text-center">
-            <h1 style=" font-size: 5rem; line-height: 5rem;">
+            <h1 style=" font-size: 5rem; line-height: 5rem; font-weight: 500;">
                 Supervised ART
             </h1>
 
@@ -349,9 +379,9 @@ h1 {
     </section>
     </div>
     <div class="box1">
-        <h1 style="font-size: 4rem; color: #333333; font-family: 'Playfair Display', sans-serif;"
-        class="text-center">What is a Supervised ART?</h1>
-    <hr style="width: 50px; color: #333333; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
+        <h1 style="font-size: 4rem; color: #333333; font-family: 'Playfair Display', sans-serif; font-weight: 500;"
+            class="text-center">What is a Supervised ART?</h1>
+        <hr style="width: 50px; color: #333333; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
         <a style="text-align: justify;">
             A supervised ART test is a test conducted in your own home, under the supervision of our trained doctors, so
             that you do not have to leave the comforts of your home to find out whether you are covid positive. Conduct
@@ -362,9 +392,9 @@ h1 {
         <br>
         <br>
         <br>
-        <h1 style="font-size: 4rem; color: #333333; font-family: 'Playfair Display', sans-serif;"
-        class="text-center">Why take a Supervised ART?</h1>
-    <hr style="width: 50px; color: #333333; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
+        <h1 style="font-size: 4rem; color: #333333; font-family: 'Playfair Display', sans-serif; font-weight: 500"
+            class="text-center">Why take a Supervised ART?</h1>
+        <hr style="width: 50px; color: #333333; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
         <a style="text-align: justify;">
             If you are feeling unwell, you don’t need to travel to a Quick Test Centre (QTC) or clinic for testing. You
             can choose to get tested via a supervised self-swab Covid-19 ART (Tele-ART) over video consultation with
@@ -387,92 +417,102 @@ h1 {
             </div>
         </div>
     </div>
+
+    <!--Who's suitable-->
     <div class="box2">
-        <h1 style="text-transform: uppercase; font-size: 4rem; color: #333333; font-family: 'Playfair Display', sans-serif;"
-        class="text-center">Who's Suitable</h1>
-    <hr style="width: 50px; color: #333333; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
+        <h1 style=" font-weight: 500;font-size: 4rem; color: #333333; font-family: 'Playfair Display', sans-serif;"
+            class="text-center">Who's Suitable</h1>
+        <hr style="width: 50px; color: #333333; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
+
+
         <div class="row">
             <div class="col whoa">
                 <img src="../assets/images/plane up.png" class="who">
                 <br>
                 <a><strong>Pre-Departure Testing</strong>
-                <br>
-                Applicable for on-arrival requirements of specific destination countries. Results valid for 24
-                hours; Check your destination country's test requirements.</a>
+                    <br>
+                    <div class="text">Applicable for on-arrival requirements of specific destination countries. Results
+                        valid for 24
+                        hours; Check your destination country's test requirements.</div>
+                </a>
             </div>
             <div class="col whoa">
                 <img src="../assets/images/plane down.png" class="who">
                 <br>
                 <a><strong>Inbound Travellers</strong>
                     <br>
-                    Applicable for select groups of travellers trying to travel to Singapore. Available for Singapore
-                    Residents, Permanent Residents, and Work Pass Holders entering or transiting Singapore.
+                    <div class="text"> Applicable for select groups of travellers trying to travel to Singapore.
+                        Available for Singapore
+                        Residents, Permanent Residents, and Work Pass Holders entering or transiting Singapore.</div>
+
                 </a>
             </div>
         </div>
-        <div class="row second">
-            <a> Terms and Conditions Apply.
+        <div class="row second ">
+            <div class="col text text-center" style="font-size: 0.9rem;">
+                Terms and Conditions Apply.
                 <br>
                 This service is only available for use in Singapore.
-            </a>
+            </div>
         </div>
     </div>
     <div class="box1">
-        <h1 style="text-transform: uppercase; font-size: 4rem; color: #333333; font-family: 'Playfair Display', sans-serif;"
-        class="text-center">How to book?</h1>
-    <hr style="width: 50px; color: #333333; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
-            <div class="row steps">
-                <div class="col-6">
-                    <div class="steps3">
-                        <h3>Step 1. Make a booking on our <a href="booknow.html">bookings page</a>!</h3>
-                        <a>Make sure your timeslot is entered correctly. </a>
-                    </div>
-                </div>
-                <div class="col-6">    
-                    <img src="../assets/images/booknow.png" style="height: 25vw; width: auto;">
+        <h1 style="font-size: 4rem; color: #333333; font-family: 'Playfair Display', sans-serif; font-weight: 500;"
+            class="text-center">How to book?</h1>
+        <hr style="width: 50px; color: #333333; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
+        <div class="row steps">
+            <div class="col-6">
+                <div class="steps3">
+                    <h3>Step 1. Make a booking on our <a href="booknow.html">bookings page</a>!</h3>
+                    <a>Make sure your timeslot is entered correctly. </a>
                 </div>
             </div>
-            <div class="row steps">
-                <div class="col-6">
-                    <div class="steps3">
+            <div class="col-6">
+                <img src="../assets/images/booknow.png" style="height: 25vw; width: auto;">
+            </div>
+        </div>
+        <div class="row steps">
+            <div class="col-6">
+                <div class="steps3">
 
                     <h3>Step 2. Download our <strong>Aurora Medical App</strong></h3>
-                        <a>Download our app from the app store or Google Play Store!</a>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <img src="../assets/images/iphone.png" style="height: 25vw; width: auto;">
+                    <a>Download our app from the app store or Google Play Store!</a>
                 </div>
             </div>
-            <div class="row steps">
-                <div class="col-6">
-                    <div class="steps3">
-
-                        <h3>Step 3. Prepare your ART test kit with the app on the day of the appointment</h3>
-                        <a>Ensure the items are already prepared for you, so as to minimize the delay in conducting the
-                            test.</a>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <img src="../assets/images/sartkit.png" style="height: 25vw; width: auto;">
-                    </div>
+            <div class="col-6">
+                <img src="../assets/images/iphone.png" style="height: 25vw; width: auto;">
             </div>
-            <div class="row steps">
-                <div class="col-6">
-                    <div class="steps3">
-
-                        <h3>Step 4. Wait for the results to come back in less than 24 hours</h3>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <img src="../assets/images/24hours.png" style="height: 20vw; width: auto; margin-top: 2%;">
-                </div>
-            </div>
-            <div class="row steps2">
-                <h3>Book a supervised ART now at:</h3>
-                <a href="booknow.html"><button href="booknow.html" class="bookbtn herobtn" style="margin-top: 5%;">Book Now</button></a>
-            </div>  
         </div>
+        <div class="row steps">
+            <div class="col-6">
+                <div class="steps3">
+
+                    <h3>Step 3. Prepare your ART test kit with the app on the day of the appointment</h3>
+                    <a>Ensure the items are already prepared for you, so as to minimize the delay in conducting the
+                        test.</a>
+                </div>
+            </div>
+            <div class="col-6">
+                <img src="../assets/images/sartkit.png" style="height: 25vw; width: auto;">
+            </div>
+        </div>
+        <div class="row steps">
+            <div class="col-6">
+                <div class="steps3">
+
+                    <h3>Step 4. Wait for the results to come back in less than 24 hours</h3>
+                </div>
+            </div>
+            <div class="col-6">
+                <img src="../assets/images/24hours.png" style="height: 20vw; width: auto; margin-top: 2%;">
+            </div>
+        </div>
+        <div class="row steps2">
+            <h3>Book a supervised ART now at:</h3>
+            <a href="booknow.html"><button href="booknow.html" class="bookbtn herobtn" style="margin-top: 5%;">Book
+                    Now</button></a>
+        </div>
+    </div>
 
     <!-- Footer -->
     <div class="container-fluid footer-container">
@@ -486,10 +526,14 @@ h1 {
             </div>
 
             <div class="col-4 text-center px-2" style="font-weight: 400;">
-                <div class="quicklinksdiv"><a href="./contact-us.html#contact-info" class="quicklinks midlinks">Find a Clinic</a></div>
-                <div class="quicklinksdiv"><a href="../index.html#package-recommendation" class="quicklinks midlinks">Tests for Travel</a></div>
-                <div class="quicklinksdiv"><a href="./booknow.html" class="quicklinks midlinks">Book an Appointment</a></div>
-                <div class="quicklinksdiv"><a href="./contact-us.html" class="quicklinks midlinks">Make An Enquiry</a></div>
+                <div class="quicklinksdiv"><a href="./contact-us.html#contact-info" class="quicklinks midlinks">Find a
+                        Clinic</a></div>
+                <div class="quicklinksdiv"><a href="../index.html#package-recommendation"
+                        class="quicklinks midlinks">Tests for Travel</a></div>
+                <div class="quicklinksdiv"><a href="./booknow.html" class="quicklinks midlinks">Book an Appointment</a>
+                </div>
+                <div class="quicklinksdiv"><a href="./contact-us.html" class="quicklinks midlinks">Make An Enquiry</a>
+                </div>
             </div>
 
             <div class="col-4 text-center px-2">
